# glacon

./: .env-template  .gitignore  Cargo.toml  README.md  docker-compose.yml  spark.sql
risingwave/: README.md  docker-compose.yml
spark/: run-sql.sh  spark-defaults.conf
spark/scripts/: 1-create_orders.sql  2-alter_orders.sql
src/: data.rs  lib.rs  main.rs  order.rs  partitioned_location_generator.rs
